# HaskellLexer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  lexer.cabal  lexer.hs
copilot/: chat_240324.json  chat_270324.json
src/: Lang.hs  Lexer.hs  Main.hs  Parser.hs  Tokenizer.hs
test/: Main.hs  Tests.hs  example_input.txt  program1.txt
