cabal-version:   3.0
name:            lexer
version:         1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      435victorjavier@gmail.com
author:          Victor Quintana
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Lang
        Tokenizer
        Parser

    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.2.1,
        containers

executable lexer
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        Lang
        Tokenizer
        Parser

    default-language: GHC2021
    ghc-options:      -Wall -O2
    build-depends:
        base ^>=4.18.2.1,
        containers,
        lexer

test-suite lexer-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.2.1,
        lexer,
        containers,
        HUnit
